Closed Bug 1217302 Opened 9 years ago Closed 9 years ago

Unexpected BluetoothNamedValue “UUIDS” appears in BluetoothDevice::SetPropertyByValue() and causes a BT_WARNING.

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:2.2r+, b2g-v2.2r fixed)

RESOLVED FIXED
blocking-b2g 2.2r+
Tracking Status
b2g-v2.2r --- fixed

People

(Reporter: jaliu, Assigned: jaliu)

Details

Attachments

(1 file, 2 obsolete files)

It only happens on FxOS v2.2 / v2.2r branch. If users try to connect to any remote Bluetooth device, the action will trigger few remote properties updates, including the UUIDs of device. However, the UUIDs can't be updated properly on FxOS v2.2/v2.2r due to the incorrect BluetoothNamedValue "UUIDS". The unexpected BluetoothNamedValue also causes a BT_WARNING, "WARNING: Not handling device property: UUIDS: file ../../../gecko/dom/bluetooth/BluetoothDevice.cpp, line 165"
Upload a patch for v2.2r first. I will upload a patch for v2.2 too if we decide to fix it on v2.2.
Attachment #8677261 - Flags: review?(shuang)
Comment on attachment 8677262 [details] [diff] [review] (for 2.2r) Fix the incorrect BluetoothNamedValue of PROPERTY_UUIDS in BluetoothServiceBluedroid. (v1) Hi Shawn, Please review this patch and give me some feedbacks. Thanks.
Attachment #8677262 - Flags: review?(shuang)
Comment on attachment 8677262 [details] [diff] [review] (for 2.2r) Fix the incorrect BluetoothNamedValue of PROPERTY_UUIDS in BluetoothServiceBluedroid. (v1) Review of attachment 8677262 [details] [diff] [review]: ----------------------------------------------------------------- Ah...It looks like I added this bug into code. Typo again! Thanks, Jamin!
Attachment #8677262 - Flags: review?(shuang) → review+
Assignee: nobody → 6jamin
- add reviewer's name to commit message - convert the patch to hg format Thank Shawn for reviewing the patch.
Attachment #8677262 - Attachment is obsolete: true
blocking-b2g: --- → 2.2r?
Set 2.2r+ blocker since the bug results in incorrect device CoD value.
blocking-b2g: 2.2r? → 2.2r+
Status: NEW → ASSIGNED
checkin-needed to land 2.2r patch in #comment 5.
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: