Bug 1217302 - Fix the incorrect BluetoothNamedValue of PROPERTY_UUIDS in BluetoothServiceBluedroid. r=shuang, a=2.2r+